Refactor: improved Day2Part1 code with cleaner structure and best practices